fixed temp drawer on mobile navigation bar

--- a/src/Styles/navbar-styles.css
+++ b/src/Styles/navbar-styles.css
@@ -42,7 +42,7 @@ nav {
 
   
   #nav-drawer-button{
-    margin: -20px;
+    margin: -24px;
   }
 
 .home-logo-container{
